# eet-minmax-contol

./: README.md  pyproject.toml
src/: mysolmate.py  task.py
